# bastion-app

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  desktop-build.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: connect.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: attest.rs  connector.rs  dd_enclave.rs  ee_client.rs  identity.rs  ita.rs  lib.rs  noise.rs  noise_client.rs  store.rs
crates/desktop/: index.html  package-lock.json  package.json  vite.config.js
crates/desktop/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/desktop/frontend/src/: App.svelte  app.d.ts  main.ts
crates/desktop/frontend/src/lib/: AddConnector.svelte  FleetPane.svelte  InfoBanner.svelte  NewSessionDialog.svelte  ReauthBanner.svelte  SearchPane.svelte  SessionPane.svelte  SessionsList.svelte  Sidebar.svelte  TerminalView.svelte  auth.ts  tauri.ts
crates/desktop/src/: App.svelte
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/capabilities/: default.json
crates/desktop/src-tauri/icons/: icon.icns
crates/desktop/src-tauri/src/: lib.rs  main.rs  session.rs  session_log.rs  state.rs
crates/desktop/src-tauri/src/commands/: connectors.rs  fleet.rs  identity.rs  pair.rs  search.rs  session.rs  tmux.rs
crates/desktop/src/lib/: Sidebar.svelte  TerminalPane.svelte
