[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]
# `crates/desktop/src-tauri` joins the workspace after the first Tauri
# scaffold commit — kept out today so `cargo check` at the repo root
# doesn't require the full Tauri toolchain on every contributor.

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/devopsdefender/bastion-app"
rust-version = "1.82"

[workspace.dependencies]
bastion-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util", "sync", "process", "net", "signal", "time"] }
anyhow = "1"
thiserror = "2"
directories = "5"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
snow = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
crossterm = "0.29"
