[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]
# `crates/desktop/src-tauri` is deliberately OUT of the workspace so
# a stock `cargo build` at repo root doesn't need GTK/WebKit system
# headers (cairo, webkit2gtk, libsoup). Build the desktop app from
# its own dir:
#   cd crates/desktop && npm install && cd src-tauri && cargo tauri dev
# Prereqs on Ubuntu/Debian:
#   apt install libwebkit2gtk-4.1-dev libssl-dev build-essential \
#               curl wget file libxdo-dev libsoup-3.0-dev \
#               libjavascriptcoregtk-4.1-dev

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/devopsdefender/bastion-app"
rust-version = "1.82"

[workspace.dependencies]
bastion-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util", "sync", "process", "net", "signal", "time"] }
anyhow = "1"
thiserror = "2"
directories = "5"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
snow = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
crossterm = "0.29"
