[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/devopsdefender/bastion-app"
rust-version = "1.82"

[workspace.dependencies]
bastion-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process", "net"] }
anyhow = "1"
thiserror = "2"
directories = "5"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }
hex = "0.4"
base64 = "0.22"
