[package]
name = "bastion-cli"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line frontend for bastion-app."

[[bin]]
name = "bastion"
path = "src/main.rs"

[dependencies]
bastion-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
crossterm.workspace = true
clap = { version = "4", features = ["derive"] }
