[package]
name = "bastion-desktop"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/devopsdefender/bastion-app"
rust-version = "1.82"
description = "Tauri v2 shell for the bastion-app sidebar. Thin — the frontend is the whole UI; this file just exposes bastion-core to it via Tauri commands."

# This crate is intentionally outside the top-level workspace so
# `cargo build` at repo root doesn't require GTK/WebKit headers. See
# the comment in ../../../Cargo.toml.
[workspace]

[workspace.lints.clippy]
# Tauri generates some code that trips our default-workspace-lints.
# Re-enable per-file if we ever want to.

[lib]
name = "bastion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bastion-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bastion-core = { path = "../../core" }
anyhow = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util", "sync", "process", "net", "signal", "time"] }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"

[features]
# Custom protocol is the default for production builds. Dev uses vite.
custom-protocol = ["tauri/custom-protocol"]
