[package]
name = "bastion-desktop"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tauri v2 desktop shell for bastion-app. Reuses bastion-core for identity, connectors, attest, Noise, and EE client."

[[bin]]
name = "bastion-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bastion-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
reqwest.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
